--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
           maxlength="1"
           moveNextByMaxLength
           nz-input
+          nzSize="large"
         />
       </ng-container>
     </ng-container>
