--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <div class="grid-container">
     <ng-container *ngFor="let word of words; let wordIndex = index">
       <ng-container *ngFor="let letter of word; let letterIndex = index">
+        <!-- TODO: Track indexes manually instead, and don't use the input with the weird focus hacks anymore. -->
         <input
           #input
           [(ngModel)]="letter.value"
@@ -13,6 +14,7 @@
             'hint': letter.state === state.Hint
           }"
           [readonly]="letter.state !== state.None"
+          (focus)="updateCurrentFocus(wordIndex, letterIndex)"
           class="letter grid-item"
           maxlength="1"
           moveNextByMaxLength
@@ -26,5 +28,8 @@
     <i nz-icon nzTheme="outline" nzType="reload"></i>
     Opnieuw
   </button>
+
+  <app-keyboard (keyPressed)="onPressKeyboardKey($event)" (backspacePressed)="onPressKeyboardBackspace()">
+  </app-keyboard>
 </div>
 
