Add hardware keyboard handling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
   </button>
 
   <app-keyboard
-    (keyPressed)="onKeyboardKeyPress($event)"
+    (keyPressed)="addLetterToCurrentGuess($event)"
     (enterPressed)="onKeyboardEnterPress()"
     (backspacePressed)="onKeyboardBackspacePress()">
   </app-keyboard>
