--- a/src/app/keyboard/keyboard.component.scss
+++ b/src/app/keyboard/keyboard.component.scss
@@ -9,3 +9,15 @@
   justify-content: center;
   margin-bottom: 5px;
 }
+
+.correct {
+  background-color: green;
+}
+
+.incorrect {
+  background-color: red;
+}
+
+.hint {
+  background-color: orange;
+}
