--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,39 @@
 <div class="container">
   <app-title [won]="won"></app-title>
   <div class="grid-container">
-    <ng-container *ngFor="let word of words; let wordIndex = index">
-      <ng-container *ngFor="let letter of word; let letterIndex = index">
+    <ng-container *ngFor="let word of words; ">
+      <ng-container *ngFor="let letter of word; ">
         <input
-          #input
           [(ngModel)]="letter.value"
-          (ngModelChange)="checkLetterInWord(wordIndex, letterIndex)"
           [ngClass]="{
             'correct': letter.state === state.Correct,
             'incorrect': letter.state === state.Incorrect,
             'hint': letter.state === state.Hint
           }"
-          [readonly]="letter.state !== state.None"
+          readonly
           class="letter grid-item"
           maxlength="1"
-          moveNextByMaxLength
           nz-input
           nzSize="large"
         />
       </ng-container>
     </ng-container>
   </div>
-  <button (click)="reloadPage()" class="retry-button" nz-button>
+  <button
+    (click)="resetGame()"
+    class="retry-button"
+    nz-button
+    (mousedown)="$event.preventDefault()"
+    (touchstart)="$event.preventDefault()"
+  >
     <i nz-icon nzTheme="outline" nzType="reload"></i>
     Opnieuw
   </button>
-</div>
 
+  <app-keyboard
+    #keyboard
+    (keyPressed)="addLetterToCurrentGuess($event)"
+    (enterPressed)="submitGuess()"
+    (backspacePressed)="removeLastLetter()">
+  </app-keyboard>
+</div>
