Show play again button when losing as well as winning

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
     <div class="retry-button-container">
       <button
         nz-button
-        *ngIf="won"
+        *ngIf="gameOver"
         (click)="resetGame()"
         class="retry-button"
       >
