Update Angular and ng-zorro

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,30 +3,34 @@
     <app-title [won]="won"></app-title>
 
     <div class="words-container">
-      <div class="grid-container" *ngFor="let word of words">
-        <div
-          class="letter"
-          *ngFor="let letter of word"
+      @for (word of words; track word) {
+        <div class="grid-container">
+          @for (letter of word; track letter) {
+            <div
+              class="letter"
           [ngClass]="{
             'correct': letter.state === state.Correct,
             'incorrect': letter.state === state.Incorrect,
             'hint': letter.state === state.Hint
           }">
-          {{ letter.value }}
+              {{ letter.value }}
+            </div>
+          }
         </div>
-      </div>
+      }
     </div>
 
     <div class="retry-button-container">
-      <button
-        nz-button
-        *ngIf="gameOver"
-        (click)="resetGame()"
-        class="retry-button"
-      >
-        <i nz-icon nzType="reload" nzTheme="outline"></i>
-        Opnieuw spelen
-      </button>
+      @if (gameOver) {
+        <button
+          nz-button
+          (click)="resetGame()"
+          class="retry-button"
+          >
+          <i nz-icon nzType="reload" nzTheme="outline"></i>
+          Opnieuw spelen
+        </button>
+      }
     </div>
   </div>
 
