--- a/src/app/keyboard/keyboard.component.html
+++ b/src/app/keyboard/keyboard.component.html
@@ -1,18 +1,21 @@
 <div class="keyboard">
-  <div class="keyboard-row" *ngFor="let row of keyboard">
-    <button
-      nz-button
-      *ngFor="let key of row"
-      (click)="onPress(key.value)"
-      style="margin: 2px;"
+  @for (row of keyboard; track row) {
+    <div class="keyboard-row">
+      @for (key of row; track key) {
+        <button
+          nz-button
+          (click)="onPress(key.value)"
+          style="margin: 2px;"
       [ngClass]="{
         'correct': key.state === state.Correct,
         'incorrect': key.state === state.Incorrect,
         'hint': key.state === state.Hint
       }"
-      (mousedown)="$event.preventDefault()"
-    >
-      {{ key.value }}
-    </button>
-  </div>
+          (mousedown)="$event.preventDefault()"
+          >
+          {{ key.value }}
+        </button>
+      }
+    </div>
+  }
 </div>
