Initial work for no duplicate hints, when correct letters are already available in the current guess

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -13,7 +13,7 @@
                 'incorrect': letter.state === state.Incorrect,
                 'hint': letter.state === state.Hint
               }">
-              {{ letter.value }}
+              {{ letter.character }}
             </div>
           }
         </div>
